--- a/packages/ui/src/assets/scss/layers/header/navigation-drawer.scss
+++ b/packages/ui/src/assets/scss/layers/header/navigation-drawer.scss
@@ -9,7 +9,7 @@
   top: 0;
   bottom: 0;
   left: 0;
-  z-index: 2;
+  z-index: 1;
   width: $drawer-width;
   background-color: var(--#{$prefix}lighter-black);
   color: #FFF;
