--- a/packages/ui/src/assets/scss/layers/header/notification-drawer.scss
+++ b/packages/ui/src/assets/scss/layers/header/notification-drawer.scss
@@ -6,7 +6,6 @@
   top: $header-height + 2 * 16;
   bottom: 0;
   right: 0;
-  z-index: 2;
   width: 320px;
   display: flex;
   flex-direction: column;
