--- a/packages/ui/src/assets/scss/layers/header/services-layout.scss
+++ b/packages/ui/src/assets/scss/layers/header/services-layout.scss
@@ -4,6 +4,7 @@
 .services-layout {
   position: fixed;
   inset: $header-height + 2 * 16 0 0 0;
+  z-index: -1;
   color: var(--#{$prefix}body);
   overflow-y: auto;
   background-color: var(--#{$prefix}body-bg);
